--- a/msaez0-store/src/test/resources/application.yml
+++ b/msaez0-store/src/test/resources/application.yml
@@ -1,5 +1,5 @@
 forEach: BoundedContext
-path: {{nameCamelCase}}/{{nameCamelCase}}-store/src/test/resources/application.yml
+path: {{nameCamelCase}}/{{nameCamelCase}}-store/src/test/resources
 fileName: application.yml
 ---
 spring:
