--- a/msaez0-boot/pom.xml
+++ b/msaez0-boot/pom.xml
@@ -11,13 +11,13 @@ fileName: pom.xml
         <version>21.0.0-SNAPSHOT</version>
         <relativePath></relativePath>
     </parent>
-    <groupId>com.poscodx.sample.{nameCamelCase}</groupId>
-    <artifactId>{nameCamelCase}-boot</artifactId>
+    <groupId>com.poscodx.sample.{{nameCamelCase}}</groupId>
+    <artifactId>{{nameCamelCase}}-boot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
         <dependency>
-            <groupId>com.poscodx.sample.{nameCamelCase}</groupId>
-            <artifactId>{nameCamelCase}-facade</artifactId>
+            <groupId>com.poscodx.sample.{{nameCamelCase}}</groupId>
+            <artifactId>{{nameCamelCase}}-facade</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
