service id update

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@ fileName: pom.xml
         <artifactId>poscodx-parent</artifactId>
         <version>21.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.poscodx.sample.{{nameCamelCase}}</groupId>
+    <groupId>com.poscodx.{{options.serviceId}}.{{nameCamelCase}}</groupId>
     <artifactId>{{nameCamelCase}}-kafka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
